sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
val l= getNombreValeurs()
	for (i<-1 to l-1) {
		var v=getValeur(i)
		for(k<-i to 0 by -1) {
			if (!plusPetitQue(k,v)) {setValeur(v)}
		}

}}
